--- a/docs.textile
+++ b/docs.textile
@@ -4,4 +4,38 @@ title: docs
 section: docs
 ---
 <div class="container">
+
+  <div class="row">
+    <div class="span3 bs-docs-sidebar">
+      <ul class="nav nav-list bs-docs-sidenav">
+        <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li>
+        <li><a href="#start"><i class="icon-chevron-right"></i> Getting started</a></li>
+        <li><a href="#license"><i class="icon-chevron-right"></i> License</a></li>
+      </ul>
+    </div>
+    <div class="span9">
+
+      <section id="about">
+        <div class="page-header">
+          <h1>About</h1>
+        </div>
+        <p>About.</p>
+      </section>
+
+      <section id="start">
+        <div class="page-header">
+          <h1>Getting started</h1>
+        </div>
+        <p>Getting started.</p>
+      </section>
+
+      <section id="license">
+        <div class="page-header">
+          <h1>License</h1>
+        </div>
+        <p>Getting started.</p>
+      </section>
+
+    </div>
+
 </div>
