--- a/docs.textile
+++ b/docs.textile
@@ -19,7 +19,13 @@ section: docs
         <div class="page-header">
           <h1>About</h1>
         </div>
-        <p>About.</p>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra lorem eget justo suscipit consectetur. Suspendisse nec massa eu arcu iaculis viverra commodo quis libero. Praesent sem purus, iaculis eu adipiscing sit amet, auctor vel quam. Donec ut nibh velit, vulputate vulputate odio. Phasellus mattis enim et quam sagittis consequat. Nam blandit tortor id ante egestas vel congue libero posuere. In hac habitasse platea dictumst. Donec blandit fringilla nisi, ac mattis nunc iaculis at. Mauris at pellentesque quam.
+
+Proin facilisis auctor quam sit amet vulputate. Sed auctor fringilla orci, quis interdum eros euismod eu. Proin sollicitudin luctus ipsum, id vulputate urna hendrerit a. Etiam bibendum urna vel nulla congue ut viverra nibh auctor. Sed ut magna sem. Mauris enim urna, tincidunt et scelerisque nec, rutrum vel mi. Mauris congue luctus sem, id euismod felis tincidunt nec. Cras semper, eros ut rutrum convallis, nulla nunc venenatis lectus, in facilisis dui felis non elit. Duis suscipit eros at neque hendrerit scelerisque. Donec massa enim, facilisis et tincidunt non, vulputate a urna. Aliquam porttitor lobortis enim, sed tempor augue condimentum in. Proin sagittis, eros quis tempor faucibus, magna metus sagittis dui, sed scelerisque ipsum risus quis lorem. Nulla vel massa tellus, sed ullamcorper lacus.
+
+In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dictum varius risus quis interdum. Praesent erat felis, eleifend vitae bibendum a, malesuada et dui. Aenean turpis dui, luctus non facilisis non, dignissim sed nisi. Sed ante sapien, tincidunt sed aliquam varius, tristique pretium diam. Phasellus magna felis, pretium vel accumsan ac, semper eget augue. Quisque nec congue erat. Vivamus ac risus nec diam molestie congue. Ut urna odio, rutrum a sollicitudin a, pharetra ut sapien. Sed massa ipsum, egestas id viverra sed, lobortis ac risus. Nulla facilisi. Vivamus varius dui sed dui eleifend vitae vestibulum erat pharetra.
+
       </section>
 
       <section id="start">
