--- a/docs.textile
+++ b/docs.textile
@@ -28,11 +28,27 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
       </section>
 
-      <section id="start">
+      <section id="build-and-install">
         <div class="page-header">
-          <h1>Getting started</h1>
+          <h1>Build and install instructions</h1>
         </div>
-        <p>Getting started.</p>
+
+        In order to build RoboVM you will need the following tools:
+
+        * "Git 1.7 or newer":http://git-scm.com.
+        * "CMake 2.8.8 or newer":http://www.cmake.org.
+        * Java JDK 6 or newer - "Oracle's JDK":http://www.oracle.com/technetwork/java/javase/downloads/index.html or OpenJDK:http://openjdk.java.net should work.
+        * "Maven 3":http://maven.apache.org.
+        * C/C++ compiler - GCC on Linux, clang on Mac OS X.
+
+        <h2>Mac OS X</h2>
+        
+        <h2>Ubuntu 12.04</h2>
+
+        <pre>
+          sudo apt-get install build-essential git cmake openjdk-7-jdk
+        </pre>
+
       </section>
 
       <section id="license">
