--- a/docs.textile
+++ b/docs.textile
@@ -48,7 +48,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
         
         <p>Download and install Java SE JDK 7 from "Oracle":http://www.oracle.com/technetwork/java/javase/downloads/index.html.</p>
 
-        <p>Install Xcode 4.5.2 from the Mac App Store. It includes clang and Git. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu</p>
+        <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
 
         <p>Download and install CMake.</p>
         
@@ -58,13 +58,13 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
 
-        <pre>
+        <pre class="prettyprint">
           sudo apt-get install build-essential gcc-multilib git openjdk-7-jdk maven
         </pre>
 
         <p>The cmake version in Ubuntu 12.04 is too old so we use the version from Ubuntu 12.10. In a terminal:</p>
 
-        <pre>
+        <pre class="prettyprint">
           wget http://us.archive.ubuntu.com/ubuntu/pool/main/c/cmake/cmake_2.8.9-0ubuntu1_amd64.deb
           wget http://us.archive.ubuntu.com/ubuntu/pool/main/c/cmake/cmake-data_2.8.9-0ubuntu1_all.deb
           sudo dpkg -i cmake*.deb
@@ -74,7 +74,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Run the following commands in a terminal to build RoboVM:</p>
 
-        <pre>
+        <pre class="prettyprint">
           git clone https://github.com/robovm/robovm.git
           cd robovm/vm
           ./build.sh --build=Debug
@@ -105,11 +105,11 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Download and install Java SE JDK 7 from "Oracle":http://www.oracle.com/technetwork/java/javase/downloads/index.html.</p>
 
-        <p>Install Xcode 4.5.2 from the Mac App Store. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
+        <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
 
-        <p>Install the LLVM tools in /opt/llvm. Run the following commands in Terminal:</p>
+        <p>Download and install the LLVM tools in /opt/llvm by running the following commands in Terminal:</p>
         
-        <pre>
+        <pre class="prettyprint">
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
           sudo mkdir -p /opt
           sudo tar llvm.tar.gz -C /opt
@@ -120,13 +120,13 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
 
-        <pre>
+        <pre class="prettyprint">
           sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
         </pre>
 
         <p>Install the LLVM tools in /opt/llvm. In a terminal:</p>
 
-        <pre>
+        <pre class="prettyprint">
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-linux-ubuntu_12.04.tar.gz > llvm.tar.gz
           sudo tar llvm.tar.gz -C /opt
           sudo ln -s /opt/clang+llvm-3.1-x86_64-linux-ubuntu_12.04 /opt/llvm
