--- a/docs.textile
+++ b/docs.textile
@@ -109,7 +109,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Download and install the LLVM tools in /opt/llvm by running the following commands in Terminal:</p>
         
-        <pre class="language-bash"><code>
+        <pre><code class="bash">
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
           sudo mkdir -p /opt
           sudo tar llvm.tar.gz -C /opt
