--- a/docs.textile
+++ b/docs.textile
@@ -58,13 +58,13 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
 
-        <pre class="prettyprint">
+        <pre>
           sudo apt-get install build-essential gcc-multilib git openjdk-7-jdk maven
         </pre>
 
         <p>The cmake version in Ubuntu 12.04 is too old so we use the version from Ubuntu 12.10. In a terminal:</p>
 
-        <pre class="prettyprint">
+        <pre>
           wget http://us.archive.ubuntu.com/ubuntu/pool/main/c/cmake/cmake_2.8.9-0ubuntu1_amd64.deb
           wget http://us.archive.ubuntu.com/ubuntu/pool/main/c/cmake/cmake-data_2.8.9-0ubuntu1_all.deb
           sudo dpkg -i cmake*.deb
@@ -74,7 +74,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Run the following commands in a terminal to build RoboVM:</p>
 
-        <pre class="prettyprint">
+        <pre>
           git clone https://github.com/robovm/robovm.git
           cd robovm/vm
           ./build.sh --build=Debug
@@ -109,23 +109,24 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Download and install the LLVM tools in /opt/llvm by running the following commands in Terminal:</p>
         
-        <pre><code class="language-bash">curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
+        <pre>
+          curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
           sudo mkdir -p /opt
           sudo tar llvm.tar.gz -C /opt
           sudo ln -s /opt/clang+llvm-3.1-x86_64-apple-darwin11 /opt/llvm
-        </code></pre>
+        </pre>
 
         <h3>Ubuntu 12.04 (AMD64)</h3>
 
         <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
 
-        <pre class="prettyprint">
+        <pre>
           sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
         </pre>
 
         <p>Install the LLVM tools in /opt/llvm. In a terminal:</p>
 
-        <pre class="prettyprint">
+        <pre>
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-linux-ubuntu_12.04.tar.gz > llvm.tar.gz
           sudo tar llvm.tar.gz -C /opt
           sudo ln -s /opt/clang+llvm-3.1-x86_64-linux-ubuntu_12.04 /opt/llvm
