--- a/docs.textile
+++ b/docs.textile
@@ -9,8 +9,8 @@ section: docs
     <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
         <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li>
-        <li><a href="#build"><i class="icon-chevron-right"></i> Build</a></li>
-        <li><a href="#install"><i class="icon-chevron-right"></i> Install</a></li>
+        <li><a href="#build"><i class="icon-chevron-right"></i> Building from source</a></li>
+        <li><a href="#install"><i class="icon-chevron-right"></i> Install instructions</a></li>
         <li><a href="#license"><i class="icon-chevron-right"></i> License</a></li>
       </ul>
     </div>
@@ -62,7 +62,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
           sudo apt-get install build-essential gcc-multilib git openjdk-7-jdk maven
         </pre>
 
-        <p>The cmake version in Ubuntu 12.04 is too old so we use the version from Ubuntu 12.10. In a terminal:</p>
+        <p>The cmake version in Ubuntu 12.04 is too old so we use the version from Ubuntu 12.10:</p>
 
         <pre>
           wget http://us.archive.ubuntu.com/ubuntu/pool/main/c/cmake/cmake_2.8.9-0ubuntu1_amd64.deb
@@ -88,7 +88,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
       <section id="install">
         <div class="page-header">
-          <h1>Install</h1>
+          <h1>Install instructions</h1>
         </div>
 
         <h2>Installing the RoboVM compiler dependencies</h2>
@@ -97,7 +97,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         * Java JDK 6 or newer - "Oracle's JDK":http://www.oracle.com/technetwork/java/javase/downloads/index.html or "OpenJDK":http://openjdk.java.net should work
         * "LLVM 3.1":http://llvm.org/releases
-        * An assembler - GCC (on Linux) and clang (on Mac OS X)
+        * An assembler - GCC (on Linux) and clang (on Mac OS X) are used as assembler frontends
         * A linker - GCC (on Linux) and clang (on Mac OS X) are used as linker frontends
         * Mac OS X only: To run iOS apps in the simulator or on a device you will need Xcode 4.5.2 installed
 
@@ -107,7 +107,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
 
-        <p>Download and install the LLVM tools in /opt/llvm by running the following commands in Terminal:</p>
+        <p>Download and install the LLVM tools to /opt/llvm by running the following commands in Terminal:</p>
         
         <pre>
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
@@ -124,7 +124,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
           sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
         </pre>
 
-        <p>Install the LLVM tools in /opt/llvm. In a terminal:</p>
+        <p>Download and install the LLVM tools to /opt/llvm:</p>
 
         <pre>
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-linux-ubuntu_12.04.tar.gz > llvm.tar.gz
@@ -134,7 +134,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <h2>Installing RoboVM</h2>
 
-        <p>Download a RoboVM release from ??? or use the package you built by following the instructions in the <a href="#build">Build</a> section above.</p>
+        <p>Download a RoboVM release from ??? or use a package built by following the instructions in the <a href="#build">Build</a> section above.</p>
 
       </section>
 
