--- a/docs.textile
+++ b/docs.textile
@@ -8,14 +8,14 @@ section: docs
   <div class="row">
     <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
-        <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li>
+        <!-- <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li> -->
+        <li><a href="#install"><i class="icon-chevron-right"></i> Installation instructions</a></li>
         <li><a href="#build"><i class="icon-chevron-right"></i> Building from source</a></li>
-        <li><a href="#install"><i class="icon-chevron-right"></i> Install instructions</a></li>
         <li><a href="#license"><i class="icon-chevron-right"></i> License</a></li>
       </ul>
     </div>
     <div class="span9">
-
+<!--
       <section id="about">
         <div class="page-header">
           <h1>About</h1>
@@ -26,6 +26,59 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra lorem ege
 Proin facilisis auctor quam sit amet vulputate. Sed auctor fringilla orci, quis interdum eros euismod eu. Proin sollicitudin luctus ipsum, id vulputate urna hendrerit a. Etiam bibendum urna vel nulla congue ut viverra nibh auctor. Sed ut magna sem. Mauris enim urna, tincidunt et scelerisque nec, rutrum vel mi. Mauris congue luctus sem, id euismod felis tincidunt nec. Cras semper, eros ut rutrum convallis, nulla nunc venenatis lectus, in facilisis dui felis non elit. Duis suscipit eros at neque hendrerit scelerisque. Donec massa enim, facilisis et tincidunt non, vulputate a urna. Aliquam porttitor lobortis enim, sed tempor augue condimentum in. Proin sagittis, eros quis tempor faucibus, magna metus sagittis dui, sed scelerisque ipsum risus quis lorem. Nulla vel massa tellus, sed ullamcorper lacus.
 
 In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dictum varius risus quis interdum. Praesent erat felis, eleifend vitae bibendum a, malesuada et dui. Aenean turpis dui, luctus non facilisis non, dignissim sed nisi. Sed ante sapien, tincidunt sed aliquam varius, tristique pretium diam. Phasellus magna felis, pretium vel accumsan ac, semper eget augue. Quisque nec congue erat. Vivamus ac risus nec diam molestie congue. Ut urna odio, rutrum a sollicitudin a, pharetra ut sapien. Sed massa ipsum, egestas id viverra sed, lobortis ac risus. Nulla facilisi. Vivamus varius dui sed dui eleifend vitae vestibulum erat pharetra.
+
+      </section>
+-->
+
+      <section id="install">
+        <div class="page-header">
+          <h1>Installation instructions</h1>
+        </div>
+
+        <h2>Installing the RoboVM compiler dependencies</h2>
+
+        <p>The RoboVM compiler needs the following tools to be installed on your system:</p>
+
+        * Java JDK 6 or newer - "Oracle's JDK":http://www.oracle.com/technetwork/java/javase/downloads/index.html or "OpenJDK":http://openjdk.java.net should work
+        * "LLVM 3.1":http://llvm.org/releases
+        * An assembler - GCC (on Linux) and clang (on Mac OS X) are used as assembler frontends
+        * A linker - GCC (on Linux) and clang (on Mac OS X) are used as linker frontends
+        * Mac OS X only: To run iOS apps in the simulator or on a device you will need Xcode 4.5.2 installed
+
+        <h3>Mac OS X</h3>
+
+        <p>Download and install Java SE JDK 7 from "Oracle":http://www.oracle.com/technetwork/java/javase/downloads/index.html.</p>
+
+        <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
+
+        <p>Download and install the LLVM tools to /opt/llvm by running the following commands in Terminal:</p>
+        
+        <pre>
+          curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
+          sudo mkdir -p /opt
+          sudo tar llvm.tar.gz -C /opt
+          sudo ln -s /opt/clang+llvm-3.1-x86_64-apple-darwin11 /opt/llvm
+        </pre>
+
+        <h3>Ubuntu 12.04 (AMD64)</h3>
+
+        <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
+
+        <pre>
+          sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
+        </pre>
+
+        <p>Download and install the LLVM tools to /opt/llvm:</p>
+
+        <pre>
+          curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-linux-ubuntu_12.04.tar.gz > llvm.tar.gz
+          sudo tar llvm.tar.gz -C /opt
+          sudo ln -s /opt/clang+llvm-3.1-x86_64-linux-ubuntu_12.04 /opt/llvm
+        </pre>
+
+        <h2>Installing RoboVM</h2>
+
+        <p><a href="http://download.robovm.org">Download a RoboVM release from ??? or use a package built by following the instructions in the <a href="#build">Build</a> section above.</p>
 
       </section>
 
@@ -83,58 +136,6 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
         </pre>
 
         <p>You should now have a tar.gz package in dist/target that you can install using the instructions in the <a href="#install">Install</a> section below.</p>
-
-      </section>
-
-      <section id="install">
-        <div class="page-header">
-          <h1>Install instructions</h1>
-        </div>
-
-        <h2>Installing the RoboVM compiler dependencies</h2>
-
-        <p>The RoboVM compiler needs the following tools to be installed on your system:</p>
-
-        * Java JDK 6 or newer - "Oracle's JDK":http://www.oracle.com/technetwork/java/javase/downloads/index.html or "OpenJDK":http://openjdk.java.net should work
-        * "LLVM 3.1":http://llvm.org/releases
-        * An assembler - GCC (on Linux) and clang (on Mac OS X) are used as assembler frontends
-        * A linker - GCC (on Linux) and clang (on Mac OS X) are used as linker frontends
-        * Mac OS X only: To run iOS apps in the simulator or on a device you will need Xcode 4.5.2 installed
-
-        <h3>Mac OS X</h3>
-
-        <p>Download and install Java SE JDK 7 from "Oracle":http://www.oracle.com/technetwork/java/javase/downloads/index.html.</p>
-
-        <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
-
-        <p>Download and install the LLVM tools to /opt/llvm by running the following commands in Terminal:</p>
-        
-        <pre>
-          curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
-          sudo mkdir -p /opt
-          sudo tar llvm.tar.gz -C /opt
-          sudo ln -s /opt/clang+llvm-3.1-x86_64-apple-darwin11 /opt/llvm
-        </pre>
-
-        <h3>Ubuntu 12.04 (AMD64)</h3>
-
-        <p>Most of the required tools are available in the standard Ubuntu repositories. In a terminal:</p>
-
-        <pre>
-          sudo apt-get install build-essential gcc-multilib openjdk-7-jdk
-        </pre>
-
-        <p>Download and install the LLVM tools to /opt/llvm:</p>
-
-        <pre>
-          curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-linux-ubuntu_12.04.tar.gz > llvm.tar.gz
-          sudo tar llvm.tar.gz -C /opt
-          sudo ln -s /opt/clang+llvm-3.1-x86_64-linux-ubuntu_12.04 /opt/llvm
-        </pre>
-
-        <h2>Installing RoboVM</h2>
-
-        <p>Download a RoboVM release from ??? or use a package built by following the instructions in the <a href="#build">Build</a> section above.</p>
 
       </section>
 
