--- a/docs.textile
+++ b/docs.textile
@@ -51,7 +51,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <p>Install "Xcode 4.5.2 from the Mac App Store":https://itunes.apple.com/us/app/xcode/id497799835?mt=12. It includes clang and and the iOS simulator. Once installed start Xcode and install the "Command Line Tools" component from the Downloads section under the Xcode -> Preferences... menu.</p>
 
-        <p>Download and install the LLVM tools to /opt/llvm by running the following commands in Terminal:</p>
+        <p>Download and install the LLVM tools to /opt/llvm by running the following commands in a terminal:</p>
         
         <pre>
           curl http://llvm.org/releases/3.1/clang+llvm-3.1-x86_64-apple-darwin11.tar.gz > llvm.tar.gz
@@ -78,7 +78,7 @@ In hac habitasse platea dictumst. Morbi in felis quis ante ultrices pellentesque
 
         <h2>Installing RoboVM</h2>
 
-        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz">Download the latest RoboVM release</a> or use a package built by following the <a href="#build">build instructions</a> in the section below.</p>
+        <p><a href="http://download.robovm.org/robovm-{{site.robovm.version}}.tar.gz">Download the latest RoboVM release</a> or use a package built by following the <a href="#build">build instructions</a> in the section below then run the following commands in a terminal to install it to /opt/robovm:</p>
 
         <pre>
           sudo tar robovm-{{site.robovm.version}}.tar.gz -C /opt
