--- a/docs.textile
+++ b/docs.textile
@@ -3,7 +3,7 @@ layout: default
 title: docs
 section: docs
 ---
-<div class="container">
+<div class="container" data-spy="scroll" data-target=".bs-docs-sidebar">
 
   <div class="row">
     <div class="span3 bs-docs-sidebar">
