--- a/docs.textile
+++ b/docs.textile
@@ -3,10 +3,10 @@ layout: default
 title: docs
 section: docs
 ---
-<div class="container" data-spy="scroll" data-target=".bs-docs-sidebar">
+<div class="container">
 
   <div class="row">
-    <div class="span3 bs-docs-sidebar">
+    <div id="navbar" class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
         <!-- <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li> -->
         <li><a href="#install"><i class="icon-chevron-right"></i> Installation instructions</a></li>
@@ -147,5 +147,9 @@ section: docs
       </section>
 
     </div>
+
+    <script type="text/javascript">
+      $('#navbar').affix();
+    </script>
 
 </div>
