--- a/docs.textile
+++ b/docs.textile
@@ -150,7 +150,7 @@ section: docs
 
     <script type="text/javascript">
       $(document).ready(function() {
-        $('#navbar').affix();
+        $("#navbar").affix();
       });
     </script>
 
