--- a/docs.textile
+++ b/docs.textile
@@ -6,7 +6,7 @@ section: docs
 <div class="container">
 
   <div class="row">
-    <div id="navbar" class="span3 bs-docs-sidebar">
+    <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
         <!-- <li><a href="#about"><i class="icon-chevron-right"></i> About</a></li> -->
         <li><a href="#install"><i class="icon-chevron-right"></i> Installation instructions</a></li>
@@ -147,13 +147,5 @@ section: docs
       </section>
 
     </div>
-
-    <notextile>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $("#navbar").affix();
-      });
-    </script>
-  </notextile>
 
 </div>
