--- a/docs.textile
+++ b/docs.textile
@@ -144,6 +144,25 @@ section: docs
           <h1>License</h1>
         </div>
         
+        <p>
+          The compiler and the Eclipse plug-in are GPLv2 licensed. The compiler
+          has a few dependencies that have been released under different 
+          open source licenses. For a complete list please see the 
+          <a href="https://github.com/robovm/robovm/blob/master/compiler/NOTICE.txt">compiler/NOTICE.txt</a>
+          file in the GitHub repostory.
+        </p>
+
+        <p>
+          Executables and apps produced by the compiler contain no GPLed code.
+          The runtime class libraries and the runtime native libraries which are
+          linked into the final binaries are all Apache License v2.0 licensed,
+          licensed under BSD like licenses or placed in the public domain.
+          For a complete list please see the 
+          <a href="https://github.com/robovm/robovm/blob/master/vm/NOTICE.txt">vm/NOTICE.txt</a> and
+          <a href="https://github.com/robovm/robovm/blob/master/rt/NOTICE.txt">rt/NOTICE.txt</a>
+          files in the GitHub repostory.
+        </p>
+
       </section>
 
     </div>
