--- a/docs.textile
+++ b/docs.textile
@@ -144,13 +144,25 @@ section: docs
           <h1>License</h1>
         </div>
         
+        <p>Each sub module in the GitHub repository contains a LICENSE.txt
+          file and a NOTICE.txt file. The LICENSE.txt file contains the
+          complete legal text for the license that module is released under.
+          The NOTICE.txt file contains the copyright statement for the module
+          and information on the licenses of any 3rd party dependencies used by
+          the module.
+        </p>
+
+        <h2>Compile time tools license</h2>
+
         <p>
           The compiler and the Eclipse plug-in are GPLv2 licensed. The compiler
-          has a few dependencies that have been released under different 
+          has a few 3rd party dependencies that have been released under different 
           open source licenses. For a complete list please see the 
           <a href="https://github.com/robovm/robovm/blob/master/compiler/NOTICE.txt">compiler/NOTICE.txt</a>
           file in the GitHub repostory.
         </p>
+
+        <h2>Runtime libraries licenses</h2>
 
         <p>
           Executables and apps produced by the compiler contain no GPLed code.
@@ -161,6 +173,11 @@ section: docs
           <a href="https://github.com/robovm/robovm/blob/master/vm/NOTICE.txt">vm/NOTICE.txt</a> and
           <a href="https://github.com/robovm/robovm/blob/master/rt/NOTICE.txt">rt/NOTICE.txt</a>
           files in the GitHub repostory.
+        </p>
+
+        <p>
+          The Objective-C bridge and CocoaTouch bindings have no external dependencies
+          and are released under the Apache License v2.0.
         </p>
 
       </section>
