--- a/support.textile
+++ b/support.textile
@@ -8,7 +8,7 @@ section: support
   <div class="row">
     <div class="span12">
 
-      <section id="install">
+      <section id="getting-help">
         <div class="page-header">
           <h1>Getting help</h1>
         </div>
